<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookRecycle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_page">首页</string>
    <string name="books">图书</string>
    <string name="bookshelf">书架</string>
    <string name="put_on_shelf">摆书上架</string>
    <string name="mine">我的</string>
	
</resources>
